# MeshComparisonTool

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FILE_STRUCTURE.txt  INSTALLATION.md  LICENSE  PROJECT_REPORT.md  QUICKSTART.md  README.md  REFERENCES.md  RELEASE_GUIDE.md  USER_MANUAL.md
MeshComparisonTool/: CMakeLists.txt  MeshComparisonTool.py
MeshComparisonTool/Resources/UI/: MeshComparisonTool.ui
MeshComparisonTool/Testing/Python/: CMakeLists.txt
